docs-archive/apache-airflow-providers-google/15.0.0/_sources/_api/airflow/providers/google/cloud/links/dataform/index.rst.txt
airflow.providers.google.cloud.links.dataform
=============================================

.. py:module:: airflow.providers.google.cloud.links.dataform

.. autoapi-nested-parse::

   This module contains Google Dataflow links.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.dataform.DATAFORM_BASE_LINK
   airflow.providers.google.cloud.links.dataform.DATAFORM_WORKFLOW_INVOCATION_LINK
   airflow.providers.google.cloud.links.dataform.DATAFORM_REPOSITORY_LINK
   airflow.providers.google.cloud.links.dataform.DATAFORM_WORKSPACE_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.dataform.DataformWorkflowInvocationLink
   airflow.providers.google.cloud.links.dataform.DataformRepositoryLink
   airflow.providers.google.cloud.links.dataform.DataformWorkspaceLink


Module Contents
---------------

.. py:data:: DATAFORM_BASE_LINK
   :value: '/bigquery/dataform'


.. py:data:: DATAFORM_WORKFLOW_INVOCATION_LINK
   :value: '/bigquery/dataform/locations/{region}/repositories/{repository_id}/workflows/{workflow_invocatio...


.. py:data:: DATAFORM_REPOSITORY_LINK
   :value: '/bigquery/dataform/locations/{region}/repositories/{repository_id}/details/workspaces?project={p...


.. py:data:: DATAFORM_WORKSPACE_LINK
   :value: '/bigquery/dataform/locations/{region}/repositories/{repository_id}/workspaces/{workspace_id}/fil...


.. py:class:: DataformWorkflowInvocationLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Dataflow Job Link.


   .. py:attribute:: name
      :value: 'Dataform Workflow Invocation'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'dataform_workflow_invocation_config'



   .. py:attribute:: format_str
      :value: '/bigquery/dataform/locations/{region}/repositories/{repository_id}/workflows/{workflow_invocatio...



   .. py:method:: persist(operator_instance, context, project_id, region, repository_id, workflow_invocation_id)
      :staticmethod:



.. py:class:: DataformRepositoryLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Dataflow repository link.


   .. py:attribute:: name
      :value: 'Dataform Repository'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'dataform_repository'



   .. py:attribute:: format_str
      :value: '/bigquery/dataform/locations/{region}/repositories/{repository_id}/details/workspaces?project={p...



   .. py:method:: persist(operator_instance, context, project_id, region, repository_id)
      :staticmethod:



.. py:class:: DataformWorkspaceLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Dataform workspace link.


   .. py:attribute:: name
      :value: 'Dataform Workspace'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'dataform_workspace'



   .. py:attribute:: format_str
      :value: '/bigquery/dataform/locations/{region}/repositories/{repository_id}/workspaces/{workspace_id}/fil...



   .. py:method:: persist(operator_instance, context, project_id, region, repository_id, workspace_id)
      :staticmethod:



